# Python-ALUP

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: blink.py  serial_alup.py  tcp_example.py  timestamp_examle.py  udp_alup.py
local/: sender.py  test.py
src/: Configuration.py  Device.py  Frame.py  SerialConnection.py  UdpConnection.py
src/pyalup/: Configuration.py  Device.py  Frame.py  Group.py  SerialConnection.py  TcpConnection.py  UdpConnection.py  __init__.py
